--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.javax.servlet-3.0.jar=/Users/umbertopicariello/Desktop/javax.servlet-3.0.jar
+file.reference.javax.servlet-3.0.jar=javax.servlet-3.0.jar
 file.reference.mysql-connector-java-3.1.14-bin.jar=mysql-connector-java-3.1.14-bin.jar
 includes=**
 j2ee.compile.on.save=true
