--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.javax.servlet-3.0.jar=javax.servlet-3.0.jar
+file.reference.javax.servlet-3.0.jar-1=javax.servlet-3.0.jar
 file.reference.mysql-connector-java-3.1.14-bin.jar=mysql-connector-java-3.1.14-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -146,7 +146,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-3.1.14-bin.jar}:\
-    ${file.reference.javax.servlet-3.0.jar}
+    ${file.reference.javax.servlet-3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
