--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,14 +32,26 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.byte-buddy-1.7.9.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\byte-buddy-1.7.9.jar
+file.reference.client-combined-3.9.1-sources.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\client-combined-3.9.1-sources.jar
+file.reference.client-combined-3.9.1.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\client-combined-3.9.1.jar
+file.reference.commons-codec-1.10.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\commons-codec-1.10.jar
+file.reference.commons-exec-1.3.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\commons-exec-1.3.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\commons-logging-1.2.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\gson-2.8.2.jar
+file.reference.guava-23.6-jre.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\guava-23.6-jre.jar
+file.reference.httpclient-4.5.3.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\httpclient-4.5.3.jar
+file.reference.httpcore-4.4.6.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\httpcore-4.4.6.jar
 file.reference.javax.servlet-3.0.jar-1=javax.servlet-3.0.jar
 file.reference.mysql-connector-java-3.1.14-bin.jar=mysql-connector-java-3.1.14-bin.jar
+file.reference.okhttp-3.9.1.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\okhttp-3.9.1.jar
+file.reference.okio-1.13.0.jar=C:\\Users\\Federico Vitale\\Desktop\\selenium\\libs\\okio-1.13.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
+j2ee.platform.classpath=
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
@@ -146,7 +158,19 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-3.1.14-bin.jar}:\
-    ${file.reference.javax.servlet-3.0.jar-1}
+    ${file.reference.javax.servlet-3.0.jar-1}:\
+    ${file.reference.client-combined-3.9.1-sources.jar}:\
+    ${file.reference.client-combined-3.9.1.jar}:\
+    ${file.reference.byte-buddy-1.7.9.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.guava-23.6-jre.jar}:\
+    ${file.reference.httpclient-4.5.3.jar}:\
+    ${file.reference.httpcore-4.4.6.jar}:\
+    ${file.reference.okhttp-3.9.1.jar}:\
+    ${file.reference.okio-1.13.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
